cabal-version:       >=1.10
name:                trolley-scheduler
version:             0.1.0.0
synopsis:            Haskell program to schedule trolleys and shifts randomly!
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flaviocorpa@gmail.com
copyright:           2019 © Flavio Corpa
category:            Random
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable trolley-scheduler
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.12 && <4.13
                     , cond
                     , random
                     , random-shuffle
  other-modules:       Lib
  default-language:    Haskell2010

test-suite test-trolley
  main-is: test/Test.hs
  type: exitcode-stdio-1.0
  ghc-options:         -threaded
  build-depends:       base >=4.12 && <4.13
                     , cond
                     , random
                     , random-shuffle
                     , hspec
  other-modules:       Lib
  default-language:    Haskell2010